--- a/DatabankProject/DatabankProject.csproj
+++ b/DatabankProject/DatabankProject.csproj
@@ -98,6 +98,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddMovieView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddMovieView.Designer.cs">
+      <DependentUpon>AddMovieView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AddUserView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddUserView.Designer.cs">
+      <DependentUpon>AddUserView.cs</DependentUpon>
+    </Compile>
     <Compile Include="DatabaseHelper.cs" />
     <Compile Include="DashboardView.cs">
       <SubType>Form</SubType>
@@ -130,6 +142,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DetailsView.resx">
       <DependentUpon>DetailsView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HomeView.resx">
+      <DependentUpon>HomeView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProductView.resx">
+      <DependentUpon>ProductView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
