--- a/DatabankProject/DatabankProject.csproj
+++ b/DatabankProject/DatabankProject.csproj
@@ -187,6 +187,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="assets\img\" />
     <Folder Include="assets\scripts\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
