--- a/DatabankProject/DatabankProject.csproj
+++ b/DatabankProject/DatabankProject.csproj
@@ -151,6 +151,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="WriteReviewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WriteReviewForm.Designer.cs">
+      <DependentUpon>WriteReviewForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="DashboardView.resx">
       <DependentUpon>DashboardView.cs</DependentUpon>
     </EmbeddedResource>
@@ -173,6 +179,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="WriteReviewForm.resx">
+      <DependentUpon>WriteReviewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
